--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.8.0",
+    "tsparticles": "^2.8.0",
+    "tsparticles-slim": "^2.8.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
